src/objects/Apttus_Billing__BillingSystemProperties__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Billing System properties. The record should be named as &quot;System Properties&quot;.</description>
    <fields>
        <fullName>Apttus_Billing__AllowBillingPreferenceOverride__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates whether billing preferences may be overridden</description>
        <inlineHelpText>Indicates whether billing preferences may be overridden</inlineHelpText>
        <label>Allow Billing Preference Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AlwaysApplyUsageMinimum__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used by Billing to determine if usage minimum has to be applied for a billing period that has no usage</description>
        <inlineHelpText>Enable this flag if you need to apply usage minimum for a billing period that does not have any Usage Inputs</inlineHelpText>
        <label>Always Apply Usage Minimum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__AutoManagePaymentTerm__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to automatically set the payment term in invoices if billing schedule do not have any payment term.</description>
        <inlineHelpText>Option to automatically set the payment term in invoices if billing schedule do not have any payment term.</inlineHelpText>
        <label>Auto Manage Payment Term</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__BillingOrgWideEmailAddress__c</fullName>
        <description>Display name of the Organization-Wide Email Address to be used for sending Invoice emails.</description>
        <inlineHelpText>Display name of the Organization-Wide Email Address to be used for sending Invoice emails.</inlineHelpText>
        <label>Billing Org-Wide Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CreateActivityForBillingEmails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box to create activity records on Invoice/Credit Memo for emails sent.</description>
        <inlineHelpText>Check this box to create activity records on Invoice/Credit Memo for emails sent.</inlineHelpText>
        <label>Create Activity for Billing Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CreateRedundantBillingSchedules__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If a Billing Schedule has been invoiced and the user does a mid-cycle amend and the amount per period has not changed then still create a credit and a debit Billing Schedule, even though the credit and debit will be for the same amount and will cancel one another out.</description>
        <inlineHelpText>If a Billing Schedule has been invoiced and the user does a mid-cycle amend and the amount per period has not changed then still create a credit and a debit Billing Schedule, even though the credit and debit will be for the same amount and will cancel one</inlineHelpText>
        <label>Create redundant Billing Schedules</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CreateSingleDeltaBillingSchedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to only create a single delta Billing Schedule when changing the rate of an &quot;invoiced&quot; Billing Schedule mid-cycle.</description>
        <inlineHelpText>Option to only create single delta Billing Schedule when changing the rate of an &quot;invoiced&quot; Billing Schedule mid-cycle.</inlineHelpText>
        <label>Create Single Delta Billing Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CreditMemoDisplayFields__c</fullName>
        <description>Comma separated invoice line item field API names that should be displayed on the credit memo page</description>
        <label>Credit Memo Display Fields</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CurrencyDecimalPlaces__c</fullName>
        <defaultValue>5</defaultValue>
        <description>The number of Decimal Places to scale the Currency Fields in Single Currency Organization.</description>
        <inlineHelpText>The number of Decimal Places to scale the Currency Fields in Single Currency Organization.</inlineHelpText>
        <label>Currency Decimal Places</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__CustomBillingPlanItemPercentAPIName__c</fullName>
        <description>Custom API name of Percent field of Billing Plan Item. This field will be used for calculating percent value of Billing Plan Item</description>
        <inlineHelpText>This field will be used for calculating percent value of Billing Plan Item</inlineHelpText>
        <label>Custom Billing PlanItem Percent API Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__DeleteForecast__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Delete any Forecasted Billing Schedule when the Billing Schedules are created.</description>
        <inlineHelpText>If delete forecast is set to true, the forecast billing schedules linked to a proposal will be deleted as soon as the actual billing schedules are created. Do not check this box if you want to retain the forecast billing schedules linked to the proposal</inlineHelpText>
        <label>Delete Forecast</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__EvergreenRefreshBatchSize__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The batch size of Evergreen Refresh Job.</description>
        <inlineHelpText>The batch size of Evergreen Refresh Job.</inlineHelpText>
        <label>Evergreen Refresh Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__GenerateCreditMemoDocuments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A flag used to control whether or not to create a Credit Memo Document (PDF, RTF, DOC, or DOCX) as part of Invoice Run. Documents will not be generated if this flag is unchecked.</description>
        <inlineHelpText>A flag used to control whether or not to create a Credit Memo Document (PDF, RTF, DOC, or DOCX) as part of Invoice Run. Documents will not be generated if this flag is unchecked.</inlineHelpText>
        <label>GenerateCreditMemoDocuments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__GenerateInvoiceDocuments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>A flag used to control whether or not to create an Invoice Document (PDF, RTF, DOC, or DOCX) as part of Invoice Generation Batch Job. Documents will not be generated if this flag is unchecked.</description>
        <inlineHelpText>A flag used to control whether or not to create an Invoice Document (PDF, RTF, DOC, or DOCX) as part of Invoice Generation Batch Job. Documents will not be generated if this flag is unchecked.</inlineHelpText>
        <label>Generate Invoice Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__HideBillingPlanTemplateOnBillingPlanPage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Option to show or hide the button that will allow the user to create a Billing Plan Template from the Billing Plan creation page.</description>
        <inlineHelpText>Option to show or hide the button that will allow the user to create a Billing Plan Template from the Billing Plan creation page.</inlineHelpText>
        <label>Hide Bill Plan Template On Bill Plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceEmailDeliveryPeriod__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days prior to the Batch job run date (i.e Enter &quot;2&quot; to consider selecting all invoices generated from past 2 days if the batch job is running today)</description>
        <inlineHelpText>Number of days prior to the Batch job run date (i.e Enter &quot;2&quot; to consider selecting all invoices generated from past 2 days if the batch job is running today)</inlineHelpText>
        <label>Invoice Email Delivery Period</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__InvoiceGenerationBatchSize__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The number of Billing Schedules to process per batch when creating Invoices.</description>
        <inlineHelpText>The  number of Accounts to process per batch when creating Invoices.</inlineHelpText>
        <label>Invoice Generation Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__NoProrationOnRenewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to control whether the Start Date of Renewals are considered for alignment instead of using the Original Start Date. If checked, any future amendment will also consider the start date of the renewal for alignment irrespective of the billing calendar cycle.</description>
        <inlineHelpText>Flag to control whether the Start Date of Renewals are considered for alignment instead of using the Original Start Date.</inlineHelpText>
        <label>No Proration on Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SameDayCancellation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking out Same Day Cancellation option will provide with behavior where cancellation will be done on same day, unchecking it will mean Cancellation will be using cancel day + 1 behavior.</description>
        <inlineHelpText>Checking out Same Day Cancellation option will provide with behavior where cancellation will be done on same day, unchecking it will mean Cancellation will be using cancel day + 1 behavior.</inlineHelpText>
        <label>Same Day Cancellation (Deprecated)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__SimpleDiscountBSGeneration__c</fullName>
        <defaultValue>$Label.apttus_billing__generateforasset</defaultValue>
        <description>Option to determine which period and amount to use when generating new Billing Schedules for a simple discount (Net Price is positive and Delta Price is negative).</description>
        <inlineHelpText>Option to determine which period and amount to use when generating new Billing Schedules for a simple discount.</inlineHelpText>
        <label>Simple Discount BS... (Deprecated)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__TaxLevel__c</fullName>
        <description>The default tax level.

Valid Values are:
=============

Account
Product</description>
        <inlineHelpText>The default tax level.

Valid Values are:
=============

Account
Product</inlineHelpText>
        <label>Tax Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__UpdateOrderId__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this flag will update the order id on Billing Schedules when the order line status is existing and the billing on the asset hasn&apos;t been impacted.</description>
        <inlineHelpText>Select this flag will update the order id on Billing Schedules when the order line status is existing and the billing on the asset hasn&apos;t been impacted.</inlineHelpText>
        <label>Update Order Id</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__UsageMinimumFieldAPIName__c</fullName>
        <description>This field will be used by Billing during Schedule creation and Usage Rating</description>
        <inlineHelpText>Enter the API name of the custom field used to capture usage minimum fee</inlineHelpText>
        <label>Usage Minimum Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__UsageRatingBatchSize__c</fullName>
        <defaultValue>200</defaultValue>
        <description>The number of Usage Inputs to process per batch when rating Usage.</description>
        <inlineHelpText>The number of Usage Inputs to process per batch when rating Usage.</inlineHelpText>
        <label>Usage Rating Batch Size</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__UsageRatingPriceFieldOverride__c</fullName>
        <description>This field will be used for usage rating instead of the List Price. If a Price Tier is defined, then this setting will be ignored.</description>
        <inlineHelpText>Enter the API name of the price field based on which usage will be rated.</inlineHelpText>
        <label>Usage Rating Price Field Override</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Billing__WalletFlow__c</fullName>
        <description>Enter the name of the wallet manager flow that is configured in flow settings.</description>
        <inlineHelpText>Name of the wallet manager flow.</inlineHelpText>
        <label>WalletFlow</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Billing System Properties</label>
</CustomObject>